// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-jBOHFZ {
    animation-name: k-gJNjLs;
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    background-color: currentColor;
    border-radius: var(--radii-round);
  }

  .c-jBOHFZ:nth-child(1) {
    animation-delay: -300ms;
  }

  .c-jBOHFZ:nth-child(2) {
    animation-delay: -150ms;
  }

  .c-jBOHFZ:nth-child(3) {
    animation-delay: 0;
  }

  .c-gTMqnE {
    align-items: center;
    display: flex;
    justify-content: center;
    visibility: hidden;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-kaaUSm-DdIlq-isLoading-true {
    cursor: not-allowed;
    opacity: 0.6;
    pointer-events: none;
  }

  .c-jBOHFZ-jIYkAt-size-md {
    height: 6px;
    width: 6px;
    margin-left: 2px;
    margin-right: 2px;
  }

  .c-gTMqnE-fVlWzK-size-md {
    gap: var(--space-3);
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }

  .c-kaaUSm-ebjJvk-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-ebjJvk-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):hover,
  .c-kaaUSm-ebjJvk-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary900);
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):active {
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-BeIdG-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-BeIdG-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-BeIdG-cv:not([disabled]):hover,
  .c-kaaUSm-BeIdG-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary1100);
  }

  .c-kaaUSm-BeIdG-cv:not([disabled]):active {
    color: var(--colors-primary1200);
  }
}

@media  {
  .c-dhzjXW-icXxGAL-css {
    justify-content: center;
    position: absolute;
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-DdIlq-isLoading-true c-kaaUSm-cygQAa-cv"
    type="button"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icXxGAL-css"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
    </div>
    <span
      class="c-gTMqnE c-gTMqnE-fVlWzK-size-md"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-cygQAa-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }

  .c-kaaUSm-ebjJvk-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-ebjJvk-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):hover,
  .c-kaaUSm-ebjJvk-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary900);
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):active {
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-BeIdG-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-BeIdG-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-BeIdG-cv:not([disabled]):hover,
  .c-kaaUSm-BeIdG-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary1100);
  }

  .c-kaaUSm-BeIdG-cv:not([disabled]):active {
    color: var(--colors-primary1200);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-cygQAa-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-hMRxhp c-hMRxhp-dMrjnF-size-md"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }

  .c-kaaUSm-ebjJvk-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-ebjJvk-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):hover,
  .c-kaaUSm-ebjJvk-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary900);
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):active {
    color: var(--colors-primary1000);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-cygQAa-cv"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled warning outline button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }

  .c-kaaUSm-ebjJvk-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-ebjJvk-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):hover,
  .c-kaaUSm-ebjJvk-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary900);
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):active {
    color: var(--colors-primary1000);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }

  .c-kaaUSm-ebjJvk-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-ebjJvk-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):hover,
  .c-kaaUSm-ebjJvk-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary900);
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):active {
    color: var(--colors-primary1000);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-ebjJvk-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button with secondary theme 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }

  .c-kaaUSm-ebjJvk-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-ebjJvk-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):hover,
  .c-kaaUSm-ebjJvk-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary900);
  }

  .c-kaaUSm-ebjJvk-cv:not([disabled]):active {
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-BeIdG-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-BeIdG-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-BeIdG-cv:not([disabled]):hover,
  .c-kaaUSm-BeIdG-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primary1100);
  }

  .c-kaaUSm-BeIdG-cv:not([disabled]):active {
    color: var(--colors-primary1200);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-BeIdG-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;
